Tue Sep 16 17:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c: Add dynamic help to enter command.

Mon Sep 15 12:55:45 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkboard.c, render.c: fix an oversight of my last commit

Mon Sep 15 01:54:44 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	fixing some 2D board problems, moving board dimensions to
	defines in boarddim.h

	* export.c, gtkboard.c, gtkexport.c, gtkprefs.c, htmlimages.c,
	render.c, render.h, set.c, show.c, xboard.c, xgame.c:
	update of dynamic point labels on the bottom should work now,
	some fixes to export of HTML images
	
	* boarddim.h: new file
	* Makefile.am: add boarddim.h

Sat Sep 13 22:32:01 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* play.c (NewGame): Fixed reroll conditional.

Sat Sep 13 04:59:01 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkgame.c (SetAnnotation): Use strlen gettext string instead
	of magic number.

Fri 12 Sep 23:26:21 GMT Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c gnubg.c play.c  - move panels flag out to 
	  unconditional compile point.
	
Fri 12 Sep 19:17:25 GMT Jim Segrave <jes@jes-2.demon.nl>

	backgammon.h MOVE_TIME needn't be conditional
	
Fri 12 Sep 19:00:57 GMT Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c show.c set.c backgammon.h gtkgame.c - add panels on/off
	  setting


Fri Sep 12 17:56:18 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c (TextToClipboard): Chanage Japanese locale detection
	logic.

Fri 12 Sep 1707:54 GMT Jim Segrave <jes@jes-2.demon.nl>
	
        * timecontrol.c play.c backgammon.h needed Unix include files, 
	  missing return values, suppress compiler warnings
	
        * text.c show.c simplelibgen.c sgf.c      C style coments 
	  html.c gtkgame.c gnubgmodule.c gnubg.c  C style coments
          bearoffgammon.h                         C style coments
	
Thu Sep 12 10:02:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c: Edit clear chequers empty fix.
	* gtkgame.c: Manual dice in new dialog state fix
