@@ -18,7 +18,7 @@
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
-* $Id: timer.c,v 1.4 2003/08/24 11:12:49 Superfly_Jon Exp $
+* $Id: timer.c,v 1.1 2003/09/18 10:49:30 Superfly_Jon Exp $
 */
 
 #include <time.h>
