@@ -1,3 +1,8 @@
+Wed Sep 17 11:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* timercontrol.c: Changed timing function for win32
+	moved timer.c to main direcory
+
 Tue Sep 16 17:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gnubg.c, gtkgame.c: Add dynamic help to enter command.
